--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-bankwallet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://StarBase.money",
+  "homepage": "https://starbase.money",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "scp -r ./build/* deploy@178.62.214.140:/var/www/StarBase.money"
+    "deploy": "scp -r ./build/* deploy@178.62.214.140:/var/www/starbase.money"
   },
   "eslintConfig": {
     "extends": "react-app"
